# AtlasTradeAI

./: .env.example  .gitignore  README.md  pyproject.toml
config/: agent_catalog.json  demo_scenarios.json  event_catalog.json  mock_integrations.json  order_orchestration_rules.json  organization_directory.json  workflow_rules.json
docX-verbose/: Agent 系统使用大模型情况分析.md  Agent 系统使用大模型选型.md
docs/00-overview/: document-index.md  fast-start.md  project-positioning.md
docs/01-business-architecture/: business-architecture-overview.md  core-business-objects-and-fields-draft.md  domestic-vs-foreign-trade-process-comparison.md  end-to-end-business-process-architecture.md
docs/02-system-architecture/: api-request-response-examples.md  core-apis-and-service-boundaries-draft.md  database-logical-model-draft.md  database-schema-field-level-draft.md  dingtalk-notification-and-todo-design.md  dingtalk-real-integration-guide.md  event-catalog-and-field-specification.md  exception-center-design.md  hub-and-six-layer-module-mapping.md  intelligent-trade-operating-system-role-layering-and-hub-architecture.md  inter-layer-event-trigger-matrix.md  order-orchestrator-design.md  order-state-machine-design.md  system-blueprint.md  system-integration-and-data-sync-design.md  task-center-design.md  task-exception-notification-rule-config-table.md  unified-event-model-design.md
docs_llm/: LLM_CONFIG_QUICKSTART.md  ZHIPU_INTEGRATION.md
examples/: followup_event.json
scripts/: setup_zhipu.sh
tests/: test_api.py  test_follow_up_agent.py  test_zhipu_integration.py
(+108 files in other folders)
